# imgfmt

./: .gitignore  Cargo.toml  README.md  schema.sql
src/: image_processor.rs  lib.rs  types.rs  utils.rs
src/handlers/: conversion.rs  delete_file.rs  get_file.rs  mod.rs  serve_ui.rs
src/services/: cleanup_files.rs  image_processor.rs  log_ip.rs  mod.rs  r2_delete.rs  r2_get.rs  r2_upload.rs
src/templates/: index.html
