[package]
name = "imgfmt"
version = "0.1.0"
edition = "2021"
authors = ["m1031 <ro22062b@osaka-pct.ac.jp>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6.0", features = ["d1"] }
worker-macros = { version = "0.6.0" }
console_error_panic_hook = { version = "0.1.7" }
image = { version = "0.25.6", features = ["jpeg", "png", "webp", "bmp", "gif"] }
worker-router = "1.0.0"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["json"] }
uuid = { version = "1.8.0", features = ["v4", "serde", "js"] }
chrono = "0.4.41"
bcrypt = "0.15"
serde_json = "1.0.140"
